recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  		droite()
                      ^FourSquare:7: error: missing arguments for method droite in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
  	droite
        ^